k8s_yamls/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: cache
  name: cache
  namespace: openproject
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cache
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: cache
    spec:
      containers:
        - image: memcached
          name: cache
          resources: {}
      restartPolicy: Always
status: {}
