k8s_yamls/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
  namespace: openproject
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/frontend: "true"
        io.kompose.service: proxy
    spec:
      containers:
        - args:
            - ./docker/prod/proxy
          image: openproject/community:11
          name: proxy
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
