k8s_yamls/seeder-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/backend: "true"
    io.kompose.service: seeder
  name: seeder
  namespace: openproject
spec:
  containers:
    - args:
        - ./docker/prod/seeder
      image: openproject/community:11
      name: seeder
      resources: {}
      volumeMounts:
        - mountPath: /var/openproject/assets
          name: opdata
  restartPolicy: OnFailure
  volumes:
    - name: opdata
      persistentVolumeClaim:
        claimName: opdata
status: {}
