k8s_yamls/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: openproject
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.network/frontend: "true"
        io.kompose.service: web
    spec:
      containers:
        - args:
            - ./docker/prod/web
          image: openproject/community:11
          name: web
          resources: {}
          volumeMounts:
            - mountPath: /var/openproject/assets
              name: opdata
      restartPolicy: Always
      volumes:
        - name: opdata
          persistentVolumeClaim:
            claimName: opdata
status: {}
