k8s_yamls/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: cache
  name: cache
  namespace: openproject
spec:
  ports:
    - name: "11211"
      port: 11211
      targetPort: 11211
  selector:
    io.kompose.service: cache
status:
  loadBalancer: {}
